--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # belong in git's global ignore instead:
 # `$XDG_CONFIG_HOME/git/ignore` or `~/.config/git/ignore`
 
+node_modules/
+
 # Ignore bundler config.
 /.bundle
 
@@ -32,3 +34,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
